# Mayra-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Ideas.md  Readme.md
Mayra/Headers/: 3Dshapes.hpp  Application.hpp  AssimpGlmHelpers.h  Board.hpp  Callbacks.hpp  Camera.hpp  Color.hpp  FontCharacter.h  GL.hpp  GameObject.hpp  Gui.hpp  IndexBuffer.hpp  Input.hpp  Key.hpp  Light.hpp  Material.hpp  Mayra.hpp  Mesh.hpp  Model.hpp  MouseButton.h  OrthographicCamera.hpp  Renderer.hpp  SandboxScene.hpp  Scene.hpp  SceneGameObjectsTest.hpp  SceneInventoryTest.hpp  SceneMultiTexturedQuad.hpp  Shader.hpp  Skybox.h  Sprite.hpp  Test.hpp  TestBatchRenderingColor.hpp  TestBatchRenderingDynamicGeometry.hpp  TestClearColor.hpp  TestColoredQuad.hpp  TestFancyQuad.hpp  TestFonts.hpp  TestMultiTexturedQuad.hpp  TestTexturedQuad.hpp  TestsManager.hpp  (+14 more)
Mayra/Resources/: 2Dshader.vs  shader.fs  shader.vs  shader2.fs  shader2.vs  shader3.fs  shader3.vs
Mayra/Resources/Assets/3DObjects/Forest_pack_v1/: Forest_pack_v1.mtl
Mayra/Resources/Assets/3DObjects/axe/: axe.mtl
Mayra/Resources/Assets/3DObjects/dance/: Swing.fbx
Mayra/Resources/Assets/3DObjects/mossy_cube/: mossy_cube.mtl
Mayra/Scenes/: AnimationScene.cpp  AnimationScene.h  BetterFontRenderingScene.cpp  BetterFontRenderingScene.h  EmptyScene.cpp  EmptyScene.h  FreeTypeFontScene.cpp  FreeTypeFontScene.h  ModelLoadingScene.cpp  ModelLoadingScene.h  SandboxScene.cpp  SandboxScene.h  SceneGameObjectsTest.cpp  SceneMultiTexturedQuad.cpp  Scenes.h  SkyboxScene.cpp  SkyboxScene.h
Mayra/Scenes/nature_of_code/: VectorScene.cpp  VectorScene.h
Mayra/Shaders/: 2Dshader.frag  2Dshader.vert  Animation.vert  BatchRenderingColor.frag  BatchRenderingColor.vert  ColoredQuad.frag  ColoredQuad.vert  Colors.frag  Default.glsl  EditorBg.frag  EditorBg.vert  FancyQuad.frag  Font.frag  Font.vert  Fonts.vert  GeomShader.geom  GeomShader.vert  LightCube.vert  LightingMaps.frag  ModelLoading.frag  PhongShading.vert  SimpleTransform.frag  SimpleTransform.vert  TexturedQuad.frag
Mayra/Sources/: Application.cpp  Board.cpp  GL.cpp  GameObject.cpp  Gui.cpp  IndexBuffer.cpp  Input.cpp  Main.cpp  Mesh.cpp  Model.cpp  OrthographicCamera.cpp  Renderer.cpp  SandboxScene.cpp  Scene.cpp  SceneGameObjectsTest.cpp  SceneInventoryTest.cpp  SceneMultiTexturedQuad.cpp  Shader.cpp  Skybox.cpp  Sprite.cpp  Test.cpp  TestBatchRenderingColor.cpp  TestBatchRenderingDynamicGeometry.cpp  TestClearColor.cpp  TestColoredQuad.cpp  TestFancyQuad.cpp  TestFonts.cpp  TestMultiTexturedQuad.cpp  TestTexturedQuad.cpp  TestsManager.cpp  Tetromino.cpp  Texture.cpp  Texture2D.cpp  TextureCubemap.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  application.cpp  gui.cpp  main.cpp  (+3 more)
