cmake_minimum_required(VERSION 3.0)
project(Mayra)

option(GLFW_BUILD_DOCS OFF)
option(GLFW_BUILD_EXAMPLES OFF)
option(GLFW_BUILD_TESTS OFF)
add_subdirectory(Glitter/Vendor/glfw)

add_subdirectory(Glitter/Vendor/freetype)

# option(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
# option(ASSIMP_BUILD_SAMPLES OFF)
# option(ASSIMP_BUILD_TESTS OFF)
# add_subdirectory(Glitter/Vendor/assimp)

# option(BUILD_BULLET2_DEMOS OFF)
# option(BUILD_CPU_DEMOS OFF)
# option(BUILD_EXTRAS OFF)
# option(BUILD_OPENGL3_DEMOS OFF)
# option(BUILD_UNIT_TESTS OFF)
# add_subdirectory(Glitter/Vendor/bullet)

if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++11")
    if(NOT WIN32)
        set(GLAD_LIBRARIES dl)
    endif()
endif()

include_directories(Mayra/Headers/
                    # Glitter/Vendor/assimp/include/
                    # Glitter/Vendor/bullet/src/
                    Glitter/Vendor/glad/include/
                    Glitter/Vendor/glfw/include/
                    Glitter/Vendor/glm/
                    Glitter/Vendor/imgui/
                    Glitter/Vendor/imgui/backends/
                    Glitter/Vendor/stb/
                    Glitter/Vendor/freetype/
                    Glitter/Vendor)

file(GLOB VENDORS_SOURCES Glitter/Vendor/glad/src/glad.c
                          Glitter/Vendor/imgui/backends/imgui_impl_glfw.*
                          Glitter/Vendor/imgui/backends/imgui_impl_opengl3.*
                          Glitter/Vendor/imgui/*.h
                          Glitter/Vendor/imgui/*.cpp
                          Glitter/Vendor/)

file(GLOB PROJECT_HEADERS Mayra/Headers/*.hpp)
file(GLOB PROJECT_SOURCES Mayra/Sources/*.cpp)
file(GLOB PROJECT_SHADERS Mayra/Shaders/*.comp
                          Mayra/Shaders/*.frag
                          Mayra/Shaders/*.geom
                          Mayra/Shaders/*.vert)

file(GLOB PROJECT_FONTS Mayra/Resources/Assets/Fonts/*.ttf
                        Mayra/Resources/Assers/Fonts/*.TTF)

file(GLOB PROJECT_CONFIGS CMakeLists.txt
                          Readme.md
                         .gitattributes
                         .gitignore
                         .gitmodules)

file(GLOB PROJECT_ASSETS Mayra/Resources/Assets/Textures/*.png
                         Mayra/Resources/Assets/Textures/*.jpg)

source_group("Headers" FILES ${PROJECT_HEADERS})
source_group("Shaders" FILES ${PROJECT_SHADERS})
source_group("Sources" FILES ${PROJECT_SOURCES})
source_group("Vendors" FILES ${VENDORS_SOURCES})
source_group("Assets" FILES ${PROJECT_ASSETS})
source_group("Fonts" FILES ${PROJECT_FONTS})

add_definitions(-DGLFW_INCLUDE_NONE
                -DPROJECT_SOURCE_DIR=\"${PROJECT_SOURCE_DIR}\")
add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS}
                               ${PROJECT_SHADERS} ${PROJECT_CONFIGS}
                               ${VENDORS_SOURCES} ${PROJECT_ASSETS}
                               ${PROJECT_FONTS})
target_link_libraries(${PROJECT_NAME} glfw freetype # assimp
                      ${GLFW_LIBRARIES} ${GLAD_LIBRARIES})
                    #   BulletDynamics BulletCollision LinearMath)
set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})

add_custom_command(
    TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/Mayra/Shaders $<TARGET_FILE_DIR:${PROJECT_NAME}>/Shaders
    DEPENDS ${PROJECT_SHADERS})

add_custom_command(
    TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/Mayra/Resources/Assets $<TARGET_FILE_DIR:${PROJECT_NAME}>/Assets
    DEPENDS ${PROJECT_ASSETS})
